[package]
name = "framenode"
version = "4.5.2"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2021"

[[bin]]
name = "framenode"
path = "src/main.rs"

[dependencies]
futures-timer = "3.0.2"
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "3", features = [
    "derive",
    "chain-error",
] }
clap = { version = "=4.3.17", features = ["derive"] }
serde_json = "1.0.61"
jsonrpsee = { version = "0.16.2", features = ["server"] }
secp256k1 = { version = "0.7", features = ["hmac"], package = "libsecp256k1" }

framenode-chain-spec = { path = "chain_spec" }
common = { path = "../common" }
dex-api-rpc = { path = "../pallets/dex-api/rpc" }
dex-manager-rpc = { path = "../pallets/dex-manager/rpc" }
rewards-rpc = { path = "../pallets/rewards/rpc" }
iroha-migration-rpc = { path = "../pallets/iroha-migration/rpc" }
trading-pair-rpc = { path = "../pallets/trading-pair/rpc" }
assets-rpc = { path = "../pallets/assets/rpc" }
liquidity-proxy-rpc = { path = "../pallets/liquidity-proxy/rpc" }
eth-bridge-rpc = { path = "../pallets/eth-bridge/rpc" }
farming-rpc = { path = "../pallets/farming/rpc" }
pswap-distribution-rpc = { path = "../pallets/pswap-distribution/rpc" }
vested-rewards-rpc = { path = "../pallets/vested-rewards/rpc" }
beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", optional = true }
beefy-light-client-rpc = { git = "https://github.com/sora-xor/sora2-common.git", optional = true }
oracle-proxy-rpc = { path = "../pallets/oracle-proxy/rpc" }

# Parachain dependencies
framenode-runtime = { path = "../runtime" }

# Substrate dependencies
bridge-proxy-rpc = { path = "../pallets/bridge-proxy/rpc" }
sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-block-builder = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-blockchain = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-keystore = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-consensus = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-consensus-slots = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-consensus-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-consensus-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-consensus-aura = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-consensus-aura = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-client-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-client-db = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-executor = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-service = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
try-runtime-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", optional = true }
telemetry = { package = "sc-telemetry", git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-basic-authorship = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-finality-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sc-chain-spec = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
pallet-transaction-payment-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
frame-benchmarking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
frame-benchmarking-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", optional = true }
substrate-frame-rpc-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
beefy-gadget = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-mmr-primitives = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
beefy-gadget-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
mmr-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
mmr-gadget = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
leaf-provider-rpc = { git = "https://github.com/sora-xor/sora2-common.git" }
sc-transaction-pool = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
frame-remote-externalities = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }

# TODO remove after toolchain is updated
# newer versions of library requires newer toolchain, current is `nightly-2023-03-21`
ahash = "=0.8.5"
bumpalo = "=3.14.0"
cargo-platform = "=0.1.7"
substrate-bip39 = "=0.4.5"
schnellru = "=0.2.1"
bstr = "=1.9.1"
predicates-tree = "=1.0.9"
predicates-core = "=1.0.6"
predicates = "=3.1.0"
wasm-bindgen = "=0.2.92"

[build-dependencies]
substrate-build-script-utils = "3"

[dev-dependencies]
# TODO remove after toolchain is updated
# newer versions of librirary requires newer toolchain, current is `nightly-2023-03-21`
assert_cmd = "=2.0.13"
tokio = { version = "1.10.1", features = ["macros"] }

# Substrate dependencies
pallet-sudo = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }

framenode-chain-spec = { path = "chain_spec", features = ["test"] }

[features]
include-real-files = []

main-net-coded = []

private-net = [
    "framenode-chain-spec/private-net",
    "framenode-runtime/private-net",
]

wip = [
    "framenode-chain-spec/wip",
    "framenode-runtime/wip",
    "beefy-light-client",
    "beefy-light-client-rpc",
]

stage = ["framenode-chain-spec/stage", "framenode-runtime/stage"]

runtime-benchmarks = [
    "frame-benchmarking-cli",
    "framenode-runtime/runtime-benchmarks",
    "sc-client-db/runtime-benchmarks",
]

try-runtime = [
    "try-runtime-cli",
    "try-runtime-cli/try-runtime",
    "framenode-runtime/try-runtime",
]
