[package]
name = "framenode"
version = "4.7.6"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2021"

[[bin]]
name = "framenode"
path = "src/main.rs"

[dependencies]
futures-timer = "3.0.2"
futures = "0.3"
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "3", features = [
    "derive",
    "chain-error",
] }
clap = { version = "=4.6.0", features = ["derive"] }
serde_json = "1.0.61"
jsonrpsee = { version = "0.24.10", features = ["server"] }
secp256k1 = { version = "0.7", features = ["hmac"], package = "libsecp256k1" }

framenode-chain-spec = { path = "chain_spec" }
common = { path = "../common" }
assets = { path = "../pallets/assets" }
dex-api-rpc = { path = "../pallets/dex-api/rpc" }
dex-manager-rpc = { path = "../pallets/dex-manager/rpc" }
rewards-rpc = { path = "../pallets/rewards/rpc" }
iroha-migration-rpc = { path = "../pallets/iroha-migration/rpc" }
trading-pair-rpc = { path = "../pallets/trading-pair/rpc" }
assets-rpc = { path = "../pallets/assets/rpc" }
liquidity-proxy-rpc = { path = "../pallets/liquidity-proxy/rpc" }
eth-bridge-rpc = { path = "../pallets/eth-bridge/rpc" }
farming-rpc = { path = "../pallets/farming/rpc" }
pswap-distribution-rpc = { path = "../pallets/pswap-distribution/rpc" }
vested-rewards-rpc = { path = "../pallets/vested-rewards/rpc" }
beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", optional = true }
beefy-light-client-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", optional = true }
oracle-proxy-rpc = { path = "../pallets/oracle-proxy/rpc" }
solana-proof-runtime-interface = { path = "../utils/solana-proof-runtime-interface" }
ton-proof-runtime-interface = { path = "../utils/ton-proof-runtime-interface" }

# Parachain dependencies
framenode-runtime = { path = "../runtime" }

# Substrate dependencies
bridge-proxy-rpc = { path = "../pallets/bridge-proxy/rpc" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-finality-grandpa = { package = "sc-consensus-grandpa", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3", optional = true }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-beefy = { package = "sp-consensus-beefy", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
beefy-gadget = { package = "sc-consensus-beefy", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sp-mmr-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
beefy-gadget-rpc = { package = "sc-consensus-beefy-rpc", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
mmr-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
mmr-gadget = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
xor-fee = { path = "../pallets/xor-fee" }
leaf-provider-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
frame-remote-externalities = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }
finality-grandpa = "=0.16.3"
substrate-bip39 = "=0.4.5"

[target.'cfg(target_os = "linux")'.dependencies]
# Netlink-based watchers rely on Linux-specific libc types; keep them off macOS builds.
if-watch = "=3.2.2"
netlink-proto = "=0.12.0"

[build-dependencies]
substrate-build-script-utils = "3"

[dev-dependencies]
tokio = { version = "1.10.1", features = ["macros"] }

# Substrate dependencies
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3" }

framenode-chain-spec = { path = "chain_spec", features = ["test"] }

# Linux-only netlink dependencies (do not compile on macOS)
[target.'cfg(not(target_os = "macos"))'.dependencies]
netlink-proto = "=0.12.0"
if-watch = "=3.2.2"

[features]
default = ["runtime-wasm"]

include-real-files = []

main-net-coded = []

runtime-wasm = [
    "framenode-chain-spec/runtime-wasm",
]

private-net = [
    "framenode-chain-spec/private-net",
    "framenode-runtime/private-net",
]

wip = [
    "framenode-chain-spec/wip",
    "framenode-runtime/wip",
    "beefy-light-client",
    "beefy-light-client-rpc",
]

stage = ["framenode-chain-spec/stage", "framenode-runtime/stage"]

runtime-benchmarks = [
    "frame-benchmarking-cli",
    "frame-benchmarking-cli/runtime-benchmarks",
    "framenode-runtime/runtime-benchmarks",
    "sc-client-db/runtime-benchmarks",
]

try-runtime = [
    "framenode-runtime/try-runtime",
]
