[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

[dependencies]

blake2-rfc = { version = "0.2.18", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false }
frame-support = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "polkadot-v1.1.0", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
hex-literal = "0.4.1"
scale-info = { version = "2", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = [
    "derive",
], default-features = false }
sp-core = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "polkadot-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "polkadot-v1.1.0", default-features = false }
static_assertions = "1.1.0"

bridge-types = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.1.0", default-features = false }
pallet-timestamp = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "polkadot-v1.1.0", default-features = false }

[dev-dependencies]
serde_json = "1.0.41"

[features]

default = ["std"]

std = [
    "bridge-types/std",
    "blake2-rfc/std",
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "serde/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
]

[patch."https://github.com/w3f/ring-vrf"]
bandersnatch_vrfs = { git = "https://github.com/w3f/ring-vrf.git#4125212", rev = "4125212" }

[patch."https://github.com/open-web3-stack/open-runtime-module-library.git"]
orml-currencies = { git = "https://github.com/open-web3-stack//open-runtime-module-library.git", branch = "polkadot-v1.1.0" }