[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-gen = { path = "./ethereum-gen" }
substrate-gen = { path = "./substrate-gen" }
parachain-gen = { path = "./parachain-gen" }
beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", default-features = false }
bridge-common = { git = "https://github.com/sora-xor/sora2-common.git", default-features = false }
bridge-types = { git = "https://github.com/sora-xor/sora2-common.git" }
leaf-provider-rpc = { git = "https://github.com/sora-xor/sora2-common.git" }
ethers = { version = "2.0.0", features = [
  "ws",
  "rustls",
] }
ethers-core = "=2.0.0"
common = { path = "../common" }
subxt = { version = "0.25.0" }
tokio = { version = "1.14.0", features = ["full"] }
url = "2.2.2"
http = "0.2.6"
anyhow = "1.0.51"
jsonrpsee = { version = "0.16.2", features = [
  "macros",
  "ws-client",
  "http-client",
] }
clap = { version = "=3.2.22", features = ["derive"] }
async-trait = "0.1.56"
rlp = "0.5.2"
triehash = "0.8.4"
eth_trie = "0.1.0"
keccak-hasher = "0.15.3"
hex = "0.4.3"
hex-literal = "0.3.4"
futures = "0.3.17"
ethash = { git = "https://github.com/sora-xor/ethash.git", branch = "sora-v1.6.0", default-features = false }
log = "0.4.14"
env_logger = "0.9.0"
sha3 = { version = "0.10.0" }
sha2 = "0.10.0"
sha1 = "0.6.0"
ethereum-types = { version = "0.14.0", features = ["serialize"] }
rayon = "1.5.1"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
sp-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
beefy-merkle-tree = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
pallet-beefy-mmr = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
mmr-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-mmr-primitives = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
beefy-gadget-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
  "derive",
  "chain-error",
] }
thiserror = "1.0.30"
lru = "0.7.2"
k256 = "0.11.6"
assets-rpc = { path = "../pallets/assets/rpc" }
assets-runtime-api = { path = "../pallets/assets/runtime-api" }
eth-bridge = { path = "../pallets/eth-bridge" }
bridge-channel-rpc = { git = "https://github.com/sora-xor/sora2-common.git", default-features = false }
rand = "0.8.5"
mmr-lib = { package = "ckb-merkle-mountain-range", version = "0.5.2", default-features = false }
